--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,17 @@
 plugins {
+    id 'application'
     id 'java'
+    id 'org.openjfx.javafxplugin' version '0.0.13'
+}
+
+application {
+    getMainClass().set('org.exampple.World')
+}
+
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(18))
+    }
 }
 
 group 'org.example'
@@ -7,6 +19,11 @@ version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+}
+
+javafx {
+    version = "17"
+    modules = [ 'javafx.controls']
 }
 
 dependencies {
